--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=listeria
+
+spring.datasource.url = jdbc:mysql://localhost:3306
+spring.datasource.username = root
+spring.datasource.password = 123456
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
